feat: update project title font

--- a/src/pages/gamesquad.astro
+++ b/src/pages/gamesquad.astro
@@ -17,7 +17,7 @@ import GlobeSimple from "phosphor-astro/GlobeSimple.astro";
       <div class="flex items-center justify-center gap-4">
         <GameController class="h-10 w-10 text-black dark:text-white" />
         <h1
-          class="text-5xl font-light tracking-tight text-black dark:text-white"
+          class="font-serif text-5xl font-light tracking-tight text-black dark:text-white"
         >
           GameSquad
         </h1>
