--- a/src/pages/solsken.astro
+++ b/src/pages/solsken.astro
@@ -22,7 +22,7 @@ import Screenshot3 from "../assets/images/solsken_screenshot3.png";
       <div class="flex items-center justify-center gap-4">
         <Icon width="40" height="40" />
         <h1
-          class="text-5xl font-light tracking-tight text-black dark:text-white"
+          class="font-serif text-5xl font-light tracking-tight text-black dark:text-white"
         >
           Solsken
         </h1>
