--- a/src/pages/ultrawider.astro
+++ b/src/pages/ultrawider.astro
@@ -24,7 +24,7 @@ import Screenshot3 from "../assets/images/ultrawider_screenshot3.png";
           class="h-12 w-12 shrink-0"
         />
         <h1
-          class="text-5xl font-light tracking-tight text-black dark:text-white"
+          class="font-serif text-5xl font-light tracking-tight text-black dark:text-white"
         >
           Ultrawider
         </h1>
