--- a/src/pages/startrack.astro
+++ b/src/pages/startrack.astro
@@ -1,7 +1,6 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import { Image } from "astro:assets";
-import Star from "phosphor-astro/Star.astro";
 import Heart from "phosphor-astro/Heart.astro";
 import MusicNote from "phosphor-astro/MusicNote.astro";
 import Desktop from "phosphor-astro/Desktop.astro";
@@ -255,8 +254,7 @@ const downloadUrl = await getLatestDownloadUrl();
       <p
         class="text-md mx-auto mb-4 max-w-2xl font-light text-black dark:text-white"
       >
-        Available now on the Mac App Store. Compatible with macOS 12.0 and
-        later.
+        Available now. Compatible with macOS 14.0 and later.
       </p>
       <div class="flex justify-center gap-2">
         <a
