--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,11 +6,11 @@ const currentYear = new Date().getFullYear();
   <div class="flex flex-col items-center gap-8 text-sm">
     <div class="flex flex-col items-center gap-6 font-light sm:flex-row">
       <a
-        href="mailto:contact@mrlaude.com"
+        href="mailto:hello@mrlaude.com"
         class="text-black hover:underline dark:text-white"
         aria-label="Email"
       >
-        contact@mrlaude.com
+        hello@mrlaude.com
       </a>
       <a
         href="https://github.com/martinryberglaude"
