feat: update current position

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -85,9 +85,7 @@ const posts = (await getCollection("blog")).sort(
             <p
               class="text-md text-center font-light text-black md:text-start dark:text-white"
             >
-              Founding engineer @ <a href="https://ednia.se" class="underline"
-                >Ednia</a
-              >
+              Founding engineer @ Intric
             </p>
           </div>
         </div>
