--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -85,7 +85,7 @@ const posts = (await getCollection("blog")).sort(
             <p
               class="text-md text-center font-light text-black md:text-start dark:text-white"
             >
-              Founding engineer @ Intric
+              Software Engineer @ Intric
             </p>
           </div>
         </div>
