--- a/src/pages/articles/[...slug].astro
+++ b/src/pages/articles/[...slug].astro
@@ -29,7 +29,7 @@ const { Content } = await render(post);
       )
     }
     <article
-      class="prose sm:prose-md prose-neutral dark:prose-invert prose-headings:font-light prose-code:font-jetbrains prose-p:font-light mark !max-w-none pt-12"
+      class="prose sm:prose-md prose-neutral dark:prose-invert prose-headings:font-light prose-code:font-jetbrains prose-p:font-sans prose-li:font-sans mark !max-w-none pt-12"
     >
       <div class="flex flex-col items-start">
         <h1 class="!font-serif !text-4xl !font-medium">
