--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -55,11 +55,26 @@ const { title, description, image } = Astro.props;
 />
 <link
   rel="preload"
-  href="/fonts/Lora.woff2"
+  href="/fonts/Instrument.woff2"
   as="font"
   type="font/woff2"
   crossorigin
 />
+<link
+  rel="preload"
+  href="/fonts/Jetbrains.woff2"
+  as="font"
+  type="font/woff2"
+  crossorigin
+/>
+<link
+  rel="preload"
+  href="/fonts/Satoshi.woff2"
+  as="font"
+  type="font/woff2"
+  crossorigin
+/>
+
 <!-- Canonical URL -->
 <link rel="canonical" href={canonicalURL} />
 
