--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -23,13 +23,38 @@
   font-style: normal;
   font-weight: 100 900;
   font-display: swap;
+  size-adjust: 132%;
 }
 
 @font-face {
-  font-family: "Satoshi";
-  src: url("/fonts/Satoshi.woff2") format("woff2");
+  font-family: "Charter";
+  src: url("/fonts/charter_regular.woff2") format("woff2");
   font-style: normal;
-  font-weight: 100 900;
+  font-weight: 400;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Charter";
+  src: url("/fonts/charter_italic.woff2") format("woff2");
+  font-style: italic;
+  font-weight: 400;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Charter";
+  src: url("/fonts/charter_bold.woff2") format("woff2");
+  font-style: normal;
+  font-weight: 700;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Charter";
+  src: url("/fonts/charter_bold_italic.woff2") format("woff2");
+  font-style: italic;
+  font-weight: 700;
   font-display: swap;
 }
 
@@ -37,7 +62,7 @@
   --font-mono: "Drafting", "monospace";
   --font-jetbrains: "Jetbrains", "monospace";
   --font-serif: "Instrument", "serif";
-  --font-sans: "Satoshi", "sans-serif";
+  --font-charter: "Charter", "serif";
 }
 
 ::selection {
@@ -49,6 +74,32 @@
   background-color: #f0efec !important;
 }
 
+.prose li::marker {
+  color: #000000;
+}
+
+.prose pre {
+  line-height: 1.2;
+}
+
+.prose code {
+  font-size: 15px;
+}
+
+.prose :not(pre) > code {
+  background-color: var(--color-stone-200);
+  border-radius: 4px;
+  padding: 2px 6px;
+}
+
+.prose code::before {
+  content: "";
+}
+
+.prose code::after {
+  content: "";
+}
+
 @media (prefers-color-scheme: dark) {
   ::selection {
     background: #345e12;
@@ -57,5 +108,13 @@
   .astro-code span {
     color: var(--shiki-dark) !important;
     background-color: var(--shiki-dark-bg) !important;
+  }
+
+  .prose li::marker {
+    color: #ffffff;
+  }
+
+  .prose :not(pre) > code {
+    background-color: var(--color-stone-800);
   }
 }
