--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -69,7 +69,28 @@ const { title, description, image } = Astro.props;
 />
 <link
   rel="preload"
-  href="/fonts/Satoshi.woff2"
+  href="/fonts/charter_regular.woff2"
+  as="font"
+  type="font/woff2"
+  crossorigin
+/>
+<link
+  rel="preload"
+  href="/fonts/charter_italic.woff2"
+  as="font"
+  type="font/woff2"
+  crossorigin
+/>
+<link
+  rel="preload"
+  href="/fonts/charter_bold.woff2"
+  as="font"
+  type="font/woff2"
+  crossorigin
+/>
+<link
+  rel="preload"
+  href="/fonts/charter_bold_italic.woff2"
   as="font"
   type="font/woff2"
   crossorigin
