--- a/src/pages/articles/index.astro
+++ b/src/pages/articles/index.astro
@@ -9,16 +9,16 @@ const posts = (await getCollection("blog")).sort(
 ---
 
 <Layout title="Articles" description="Articles by Martin Ryberg Laude">
-  <ul class="flex flex-col gap-8 py-20">
+  <ul class="flex flex-col gap-8 px-2 py-20 md:px-6">
     {
       posts.map((post) => (
         <li>
           <a href={`/articles/${post.id}/`} class="group">
-            <h4 class="title text-md font-medium group-hover:underline dark:text-white">
+            <h4 class="title font-medium group-hover:underline dark:text-white">
               &gt; {post.data.title}
             </h4>
-            <p class="text-sm font-light">{post.data.description}</p>
-            <p class="date">
+            <p class="mt-2 font-light">{post.data.description}</p>
+            <p class="date mt-2">
               <FormattedDate date={post.data.pubDate} />
             </p>
           </a>
