--- a/src/pages/articles/[...slug].astro
+++ b/src/pages/articles/[...slug].astro
@@ -29,7 +29,7 @@ const { Content } = await render(post);
       )
     }
     <article
-      class="prose md:prose-lg prose-stone dark:prose-invert prose-headings:font-serif prose-h2:text-2xl prose-h3:text-2xl prose-h4:text-xl prose-headings:mb-4 prose-code:font-jetbrains prose-p:font-charter prose-li:font-charter mark !max-w-none pt-12"
+      class="prose md:prose-lg prose-stone dark:prose-invert prose-headings:font-serif prose-h2:text-2xl prose-h3:text-2xl prose-h4:text-xl prose-headings:mb-4 prose-code:font-jetbrains prose-p:font-sans prose-li:font-sans mark !max-w-none pt-12"
     >
       <div class="flex flex-col items-start gap-2">
         <h1 class="!font-serif !text-3xl !font-medium">
