--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -27,34 +27,10 @@
 }
 
 @font-face {
-  font-family: "Charter";
-  src: url("/fonts/charter_regular.woff2") format("woff2");
+  font-family: "Satoshi";
+  src: url("/fonts/Satoshi.woff2") format("woff2");
   font-style: normal;
-  font-weight: 400;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: "Charter";
-  src: url("/fonts/charter_italic.woff2") format("woff2");
-  font-style: italic;
-  font-weight: 400;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: "Charter";
-  src: url("/fonts/charter_bold.woff2") format("woff2");
-  font-style: normal;
-  font-weight: 700;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: "Charter";
-  src: url("/fonts/charter_bold_italic.woff2") format("woff2");
-  font-style: italic;
-  font-weight: 700;
+  font-weight: 100 900;
   font-display: swap;
 }
 
@@ -62,7 +38,7 @@
   --font-mono: "Drafting", "monospace";
   --font-jetbrains: "Jetbrains", "monospace";
   --font-serif: "Instrument", "serif";
-  --font-charter: "Charter", "serif";
+  --font-sans: "Satoshi", "sans-serif";
 }
 
 ::selection {
